[gd_scene load_steps=32 format=2]

[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://level1.gd" type="Script" id=2]
[ext_resource path="res://Tiles/door_closedMid.png" type="Texture" id=3]
[ext_resource path="res://Spike.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://SceneTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tiles/sheet.png" type="Texture" id=8]
[ext_resource path="res://LevelChange.gd" type="Script" id=9]
[ext_resource path="res://PausePopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://DoubleJump.tscn" type="PackedScene" id=11]
[ext_resource path="res://DoubleJump.gd" type="Script" id=12]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=13]
[ext_resource path="res://FallingPlatform.tscn" type="PackedScene" id=14]
[ext_resource path="res://Health.tscn" type="PackedScene" id=15]
[ext_resource path="res://OrbitingPlatformControl.tscn" type="PackedScene" id=16]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=17]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="TileSet" id=12]
0/name = "sheet.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 280, 70, 70, 70 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 70, 70 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "sheet.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 350, 490 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 70, 70 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "sheet.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 280, 70, 70, 350 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 70, 70 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 7 )
2/shape_one_way = true
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 34.2427, 20.5984 )

[sub_resource type="Animation" id=14]
resource_name = "move"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1473.9, 20.0611 ), Vector2( 1473.9, 40 ), Vector2( 1473.9, 20.016 ) ]
}

[node name="level1" type="Node2D"]
script = ExtResource( 2 )

[node name="BgLevel1" parent="." instance=ExtResource( 1 )]

[node name="Spikes" type="Node2D" parent="."]

[node name="Spike" parent="Spikes" instance=ExtResource( 4 )]
position = Vector2( 925.455, 474.633 )

[node name="Tilemaps" type="Node2D" parent="."]

[node name="TileMap" parent="Tilemaps" instance=ExtResource( 7 )]
tile_data = PoolIntArray( 327696, 0, 65537, 327697, 0, 65538, 458735, 0, 2, 458736, 0, 2, 458737, 0, 2, 393231, 0, 65537, 393232, 0, 131075, 393233, 0, 131076, 393234, 0, 65538, 524273, 0, 2, 524274, 0, 2, 524275, 0, 2, 524276, 0, 2, 524277, 0, 2, 524278, 0, 2, 458752, 0, 131078, 458753, 0, 2, 458754, 0, 2, 458755, 0, 2, 458756, 0, 2, 458757, 0, 2, 458765, 0, 65537, 458766, 0, 2, 458767, 0, 2, 458770, 0, 131076, 458771, 0, 131078, 458772, 0, 131078, 458773, 0, 131078, 458774, 0, 131078, 458775, 0, 131078, 458776, 0, 131078, 458777, 0, 131078, 458778, 0, 131078, 458779, 0, 131078, 524293, 0, 2, 524294, 0, 2, 524295, 0, 2, 524296, 0, 2, 524297, 0, 2, 524298, 0, 2, 524299, 0, 2, 524300, 0, 65537, 524301, 0, 2, 524302, 0, 2 )

[node name="OneWay" type="TileMap" parent="Tilemaps"]
tile_set = SubResource( 12 )
collision_layer = 256
collision_mask = 256
format = 1
tile_data = PoolIntArray( 65558, 2, 0, 65559, 2, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 209.537, 368.501 )

[node name="LevelChange" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource( 9 )

[node name="DoorToLevel" type="CollisionShape2D" parent="LevelChange"]
position = Vector2( 1738.2, 396.85 )
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1738.2, 409.549 )
texture = ExtResource( 3 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 514.899, 137.73 )

[node name="SceneTransition" parent="." instance=ExtResource( 6 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PausePopup" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 13 )]

[node name="DoubleJump" parent="." instance=ExtResource( 11 )]
position = Vector2( 1473.9, 33.4664 )
scale = Vector2( 2, 2 )
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DoubleJump"]
anims/move = SubResource( 14 )

[node name="FallingPlatform" parent="." instance=ExtResource( 14 )]
position = Vector2( -131.754, 365.102 )
scale = Vector2( 2, 2 )

[node name="FallingPlatform2" parent="." instance=ExtResource( 14 )]
position = Vector2( -379.389, 330.179 )
scale = Vector2( 2, 2 )

[node name="Health" parent="." instance=ExtResource( 15 )]
position = Vector2( 1455.83, 289.595 )
scale = Vector2( 2, 2 )

[node name="OrbitingPlatformControl" parent="." instance=ExtResource( 16 )]
position = Vector2( -1479.27, 322.441 )

[node name="Platform" parent="OrbitingPlatformControl" instance=ExtResource( 17 )]
position = Vector2( 144.998, 210.978 )

[node name="Platform2" parent="OrbitingPlatformControl" instance=ExtResource( 17 )]
position = Vector2( -210.978, 144.998 )

[node name="Platform3" parent="OrbitingPlatformControl" instance=ExtResource( 17 )]
position = Vector2( -144.998, -210.978 )

[node name="Platform4" parent="OrbitingPlatformControl" instance=ExtResource( 17 )]
position = Vector2( 210.978, -144.998 )
[connection signal="body_entered" from="DoubleJump" to="." method="_on_DoubleJump_body_entered"]
